fixed #humanizing 'view plans' button z-index

--- a/style.scss
+++ b/style.scss
@@ -174,6 +174,11 @@ main {
 
 }
 
+.btn:hover span {
+  background-color: white;
+  color: $Dark-Violet;
+}
+
 /* mobile and desktop line breaks */
 @media all and (min-width:376px) {
     .desktop-br {
@@ -212,7 +217,11 @@ main {
     margin-bottom: 142px;
     background-blend-mode: difference;
     position: relative;
-
+    .btn {
+      position: absolute;
+      z-index: 1;
+      transform: translate(-50%,0);
+    }
     #background-right {
         color: white;
         height: 330px;
@@ -527,6 +536,7 @@ footer {
       padding-bottom: 38px;
     }
     a.btn {
+      transform: none;
       z-index: 1;
       position: absolute;
     }
@@ -633,6 +643,7 @@ footer {
   }
 
   #humanizing {
+    padding: 0;
     background-image: none;
     padding-top: 105px;
     padding-bottom: 145px;
@@ -698,7 +709,6 @@ footer {
   } /* end #different */
 
   #how-we-work {
-
     div {
       padding-top: 20px;
     }
